--- a/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
+++ b/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
@@ -386,7 +386,267 @@ fi
 
 ### 2일차 2024-10-08
 
+#### we can do it (몇가지 사례)
+
+- 취약점은 어디에나 있지만 우리가 찾지 못했던 것이다
+
+> Shopify
+
+로그아웃 후에 세션이 만료되지 않아서 이런 쿠키를 재사용 할 수 있었던 취약점
+
+한국에서는 이런 사례로 버그바운티를 받기는 어려울지도..?
+
+버그바운티 보고서를 제출할 때에는 이러한 취약점을 통해 공격자가 어떻게 문제를 일으킬 수 있는지에 관해 적어서 제출하면 좋다
+
+> deriv
+
+메일로 `서브 도메인을 탈취` 가능함, 서브도메인 테이크오버
+
+사용되고 있지 않은 subdomain 탈취, 피싱 메일 공격 등에 활용할 수 있다
+
+사이트에 들어가게 되면 그 사이트에 수많은 이미지, gif, 자바스크립트 등의 리소스를 받아오기 위해 여러 도메인을 거치는데 만약 사이트를 만들었을 때 사용한 도메인을 더이상 쓰지 않아 팔게 되었을 때 서버 코드 상에서 지우지 않았다면 공격자가 그 도메인을 사서 본인 서버를 구축해 악성 코드가 담긴 리소스를 넘겨주게 된다면, 사이트를 열 때마다 악성코드가 실행된다
+
+3회차에 더 자세히!
+
+> SideFX
+
+XSS 취약점 - 요거는 찾으려고 하면 어떻게든 찾을 수 있는 경우가 많기 때문에 보통 버그헌팅에서는 받아주지 않곤 한다
+
+만 보고서를 한번 찔러볼 필요는 있다. 특히나 이것을 이용해서 정말로 공격을 할 수 있다는 것을 보여준다면 버그바운티를 받을 수 있다
+
+보통 XSS를 찾게 되면 `alert`를 띄우고 말지만 이 케이스에서는 정말로 XSS를 통해 사용자의 페이지를 통해서 세션 ID를 탈취하는데 성공해서 버그바운티를 받게 되었다
+
+#### 팀별 사례 조사
+
+요거는 따로 내 하드에 저장
+
+#### 정보수집
+
+그냥 아는 모든 기술을 사용하는 것이 아니라 효과적으로 취약점을 찾기 위해 정보 수집을 한다
+
+서브 도메인 테이크오버, robots.txt와 같이 정보를 찾아보기만 함으로써도 취약점을 찾을 수도 있다
+
+서브 도메인 테이크오버는 소스들의 주소에 들어갔을 때 404가 아니라 페이지 없음이 뜬다면 도메인을 사서 바로 공격할 수도 있는 취약점이다
+
+robots.txt에서는 그럴 일을 거의 없겠다만 만약 관리자 페이지가 써있고 그 페이지에서 로그인 우회 취약점을 찾게 된다면 매우 큰 버그바운티를 받을 수도 있다
+
+> 어떻게 해야하는가?
+
+##### 타겟 스코프(표면) 수집
+
+- 도메인을 확보하는 것
+
+자동화 툴 : 
+
+- [SubDomainizer](https://github.com/nsonaniya2010/SubDomainizer)
+  - 페이지에서 나오는 링크들을 분석, javascript를 분석해서 나오는 하드코딩 된 페스워트, 크레덴셜 등을 알려준다
+
+- [subscraper](https://github.com/m8sec/subscraper)
+  - 브루트포스를 통해 그냥 전체 다 스캔한다
+
+- [Amass](https://github.com/owasp-amass/amass)
+  - 원래는 포트스캔 툴로 주로 쓰지만 도메인 검색에도 쓰인다
+
+하지만 우리나라에서는 자동화 툴 쓰지 말자... 불편해 한다고... 외국에서는 오케이!
+
+구글 이용 :
+
+- 구글 검색 연산자를 사용하는 방법
+  - 예시) site:dyson.com
+  - site:도메인 -삭제도메인 -삭제도메인2
+
+강사님께서 원리만 안다면 만들 수 있을것이라고 하셔서 한번 쉬는 시간동안 만들어봤다
+
+일단은 그냥 간단히 만든거라 도메인 제외는 없다
+
+<details><summary>FDWGSD.py</summary>
+<div markdown = "1">
+
+```py
+#Find Domain With Google Search Engine
+
+print('''
+███████╗██████╗ ██╗    ██╗ ██████╗ ███████╗██████╗ 
+██╔════╝██╔══██╗██║    ██║██╔════╝ ██╔════╝██╔══██╗
+█████╗  ██║  ██║██║ █╗ ██║██║  ███╗███████╗██║  ██║
+██╔══╝  ██║  ██║██║███╗██║██║   ██║╚════██║██║  ██║
+██║     ██████╔╝╚███╔███╔╝╚██████╔╝███████║██████╔╝
+╚═╝     ╚═════╝  ╚══╝╚══╝  ╚═════╝ ╚══════╝╚═════╝ 
+''')
+
+print("ᓚᘏᗢ\n")
+
+import requests
+from bs4 import BeautifulSoup
+from urllib.parse import quote
+
+
+
+# 검색할 쿼리 (예: 'Python 구글 검색')
+query = 'site:google'
+query_encoded = quote(query)  # 쿼리를 URL에 맞게 인코딩
+
+# 구글 검색 URL
+url = f"https://www.google.com/search?q={query_encoded}"
+
+# HTTP 요청 헤더 설정 (봇으로 인식되지 않도록 일반 브라우저처럼 보이게 설정)
+headers = {
+    "User-Agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
+}
+
+# HTTP GET 요청 보내기
+response = requests.get(url, headers=headers)
+
+# 요청이 성공했는지 확인
+if response.status_code == 200:
+    # BeautifulSoup으로 HTML 파싱
+    soup = BeautifulSoup(response.text, 'html.parser')
+
+    # 검색 결과를 추출 (예: 검색 결과 제목과 링크)
+    for i, result in enumerate(soup.select('div.yuRUbf a'), start=1):
+        #title = result.get_text()
+        link = result['href']
+        print(f"{link}\n")
+        #print(f"{i}. {title}\n   {link}\n") 
+else:
+    print(f"Error: {response.status_code}")
+```
+</div>
+</details>
+<br/>
+
+> 앱에서 도메인을 찾을 때에는?
+
+- [apkleaks](https://github.com/dwisiswant0/apkleaks)
+  - 앱 안에 있는 앱서버의 주소를 찾아내는 것
+
+그런데 요거는 한국 앱에서는 하도 코드가 스파게티라서 잘 안된다고 한다
+
+##### 환경 정보 수집
+
+> Port, 서비스 확보하기
+
+- 포트스캔
+  - 시스템의 서비스를 이해하기 위해서 진행
+  - mysql, apache, OS 정보 등
+  - 버전 정보 -> CVE 검색을 통해 활용
+
+> Tool
+
+- [nmap](https://github.com/nmap/nmap)
+
+- [naabu(nmap의 버전 업)](https://github.com/projectdiscovery/naabu)
+
+> 플랫폼 환경 정보
+
+- CMS
+  - Content Management System
+  - [카페24](https://www.cafe24.com/), [워드프레스](https://wordpress.com/ko/), [그누보드](https://sir.kr/)
+- DB
+- Framework
+- Library
+
+> 플랫폼 환경정보 수집 툴
+
+- [wappalyzer](https://www.wappalyzer.com/) 크롬 확장 툴을 통해 어느정도 환경정보를 알아낼 수 있다. 100% 신뢰할 수는 없지만 그래도 꽤나 쓸모있는 툴이다
+
+> 플랫폼 환경 정보 활용
+
+- CVE 검색
+- Library 경로 정보 활용 - 게시판 데모 취약점 등
+- Open source / [COTS](https://blog.naver.com/blueiceberg/50113074320) 분석 활용
+
+##### 서비스 정보 수집
+
+> 서비스 사전 조사
+
+- 직접 방문해보기
+  - 서비스, 기능 확인 및 리스팅
+
+취약점 찾기에 바로 돌입하기 보다 직접 사용해보며 전체적인 그림을 그려보기
+
+공격자 입장에서 생각하기
+
+> 서비스 리소스 조사 : open source일 때
+
+- 소스 코드 내 경로 확인
+  - 사용하고 있는 라이브러리 정보를 알게 된다면 직접 설치하거나 github 업데이트 정보를 보고 취약점을 찾을 수 있다
+
+> 서비스 리소스 조사 : 유료 상용 프로그램 (COTS)
+
+- DEMO를 설정해 보기
+  - 예를 들어 free trial 같은거
+
+> 서비스 리소스 조사 : 회사 자체 계발 프로그램
+
+- tool (있을법한 파일을 전부 떄려넣는 방식)
+  - [getallurls (gau)](https://github.com/lc/gau)
+  - [feroxbuster](https://github.com/epi052/feroxbuster)
+
+- [wordlists.assetnote.io](https://wordlists.assetnote.io/)에 있는 리스트를 커스텀해서 리소스를 조사할 수 있다
+- `Burp Suite`의 `Content Discovery` 기능 - 하지만 유료기능
+
+> Wayback Machine
+
+과거에 있던 페이지들을 스냅샷 해서 저장해 놓은 사이트
+
+옛날과 지금을 비교해서 만약 `401 Error(권한 없음)`이 발견된다면 옛날에는 과연 어땠을까? 하고 wayback machine을 통해 확인하여 취약점을 찾을 단서가 될 수도 있다
+
+- [waymore](https://github.com/xnl-h4ck3r/waymore) 라는 자동화 툴도 있다
+
+> 리소스 조사를 할 때 중점적으로 봐야하는 파일들
+
+- DB 설정 파일
+  - 만약 노출되어있다면 바로 다운받기, 그 안에는 비밀번호 등의 중요 정보가 있다
+- Admin Page
+- Useless Page 
+  - 사용하지 않는 페이지(테스트 페이지 등)
+
+> 파라미터를 알아내는 툴
+
+- [GAP](https://github.com/xnl-h4ck3r/GAP-Burp-Extension)
+
+리소스를 알아냈을 때 그 리소스에서는 어떤 파라미터를 사용하는지 알아내기 위한 툴이다
+
+한국에서는 `X`
+
+##### 정리해두어야 하는 정보
+
+> 서버에 데이터를 어떻게 보내고 요청하는지
+
+- RESTful
+- Param
+
+> 사용자 권한 | 무엇을 못하고 무엇을 할 수 있는지
+
+- 관리자
+- 일반 사용자
+
+> 환경 정보
+
+- 서비스 플랫폼 환경
+- 서버 종류
+- 사용하는 라이브러리
+- 프레임워크
+
+#### 환경 세팅
+
+1. Ldplayer 설치
+2. magisk delta 설치
+3. 불필요한 su 파일 삭제
+4. Zygisk를 통한 우회
+5. 루팅 우회 성공
+6. Burpsuite와 에뮬레이터에 인증서 설치
+
+간단하게 하자면 위와 같다
+
+하지만 `문제발생`에도 적었듯 그 과정에서 좀 많은 문제를 마주할 수 있다
+
+아니 근데 다시 생각해봐도 왜 내가 설치한 `LDplayer`는 바이러스가 있었는지 이해가 안되네
+
 ### 3일차 2024-10-09
+
+IMG_7726 부터
 
 ### 4일차 2024-10-10
 
