--- a/_posts/2003-07-30-호롱고양이의-개발일지.md
+++ b/_posts/2003-07-30-호롱고양이의-개발일지.md
@@ -4,3 +4,7 @@ date: 2003-07-30 00:00:00 +09:00
 pin: true
 ---
 호롱고양이의 개발일지
+
+대학생이자 휴학생이며 곧 나라의 부름에 따라 군대를 다녀오겠지만 사회 복무원이 될 원하는 것은 전부 공부하고 있는 고양이
+
+ᓚᘏᗢ
