--- a/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
+++ b/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
@@ -646,20 +646,261 @@ else:
 
 ### 3일차 2024-10-09
 
-IMG_7726 부터
+원래는 `금융감독원`에 버그바운팅을 하려고 했으나 처음하는 우리에게는 어려울 것이라고 생각해 `ZUICY`로 변경하였다
+
+#### First Blood
+
+> 가장 먼저 취약점을 찾은 사람
+
+취약점을 찾을 때 모든걸 때려보면서 취약점을 찾는 것이 아니라 우리는 시나리오를 생각하면서 취약점을 찾아보는 것이 좋다. 어쩌피 떄려넣는건 자동화 툴이 더 잘하니까
+
+#### 타겟
+
+이 때는 타겟의 설명과 어떤 도메인들을 건드릴 수 있는지, 어떻게 접속하고 Burpsuit를 설정하는 방법 등을 이야기 했다
+
+자세한건 버그바운팅 서약에 따라 금물!
+
+#### 웹 캐시 취약점 (Web Cache Vuln)
+
+cache : 임시 데이터
+
+예를 들어 넷플릭스(미국서버)를 볼 때 영화 데이터가 미국에서 한국으로 날아오는데 그 선은 해저 케이블을 통해 길게 되어있어 데이터 이동하는데 시간이 많이 걸려 영화를 고화질로 보는데 문제가 있다
+
+그래서 넷플릭스는 우리나라에 `cache 서버`를 여러군데 설치해놨다
+
+이 `cache 서버`는 사람들이 자주 열람하는 컨텐츠들을 저장해 놓는 임시 서버이다
+
+요청이 오면 빠르게 응답하기 위해 서버와 클라리언트 사이에 응답의 사본을 저장하고 이를 전달하는 것
+
+요즘은 사이트를 만들면 나도 모르게 서버 앞에 `cache 서버`가 적용되어있는 경우가 많다
+
+> 캐싱되는 장소들
+
+1. cache 서버
+2. 프론트 서버
+3. 웹서버 내부
+4. 브라우저
+
+#### 어떻게 똑같은 요청이라는 것을 알까? Web Cache Work
+
+요청 url? 요청 헤더 분석? 정적 페이지만?
+
+> Cache Keys
+
+캐시 키는 캐시 프로그램, 서버마다 다르게 구성하여 이것을 통해 같은 요청인지 구분하게 된다
+
+예를들어
+
+```
+Cache key:https | GET | naver.com | /intro.html
+```
+
+> Cache Keys 로 설정되어있지 않은 것
+
+```
+Cache unkeyed: User-Agent, Cookie
+```
+
+#### WEB Cache Poisoning
+
+> 나쁜 응답이 캐시되게 만들고, 이용자들이 이 캐시를 가져가게 만드는 공격
+
+이름 그대로 캐시 오염 공격
+
+1. unkeyed 데이터 찾기
+2. Bad Cache Store
+3. Response 확인
+
+`Cache key`는 이미 사용되고 있는 캐시이기에 `unkeyed`데이터에 스크립트를 삽입하여 이루어진다
+
+Response에서 x-Cache : miss, Hit 이 나온다면 cache 서버를 사용하고 있다는 것을 알 수 있다
+
+unkeyed 데이터 중 응답에 영향을 주는 데이터를 찾아본다 -> Reflected XSS
+
+Param Miner를 이용해서 요청 헤더에서 자주 사용하는 데이터들을 때려넣어서 정말로 사용중인 파라미터를 찾게 되면 cache poisoning을 할 수 있다
+
+unkeyed 데이터를 찾았다면 값에 script를 삽입해 볼 수 있다
+
+> 주의
+
+Cache Poisoning 테스트를 할 때는 자기의 Cache key로 테스트해야한다, 그냥 일반 페이지에 악성 스크립트를 캐시하면 안된다
+
+GET 요청을 보낼 떼 `/?test=1`과 같이 자기의 캐시키로 테스트해야한다
+
+보통은 이 방법은 보고서를 안 받아주지만 공격을 증명할 수 있다면 오케이
+
+#### WEB Cache Deception (WCD)
+
+- WEB Cache Poisoning : 공격자가 악의적인 스크립트를 캐시 서버에 저장하고 이용자가 가져가는 방식
+- WEB Cache Deception : 이용자들의 개인정보가 Cache 되게 만들고 공격자가 가져가는 방식
+
+일반적으로는 정적 페이지가 캐시되지 개인정보 수정 페이지와 같은 동적 페이지는 캐시가 되지 않는다
+
+그렇기에 `WEB Cache Deception`을 수행하려면 `Rewrite`라는 기능이 서버에 켜져있어야한다
+
+> Rewrite
+
+확장자가 없이 요청되는 페이지가 이 기능을 사용한 것이다
+
+서버에서 요청이 들어온 URL을 매핑해서 응답해준다
+
+> 예시
+
+`/main/index/exploit.css` 라는 파일을 검색한다고 했을 때
+
+`rewrite ^(/main/.*)/$/$1.php last;`와 같이 규칙이 생성되어있다면 `php`파일이 아니기에 `404 not found`가 뜨는 것이 정상인데
+
+`rewrite ^(/main/.*)/.*$/$1.php last;`와 같이 규칙이 생성되어있다면 `/main/index.php`를 응답하는 경우가 있다
+
+이렇게 되면 마이페이지에 있는 데이터도 css 즉 정적 페이지에 있는 데이터라고 속여서 cache 서버가 캐시를 하게 만들 수 있다
+
+1. 공격자가 `/main/mypage/exploit.css`를 피해자한테 전달
+2. 피해자가 링크를 클릭 했을 때 `/main/mypage.php`를 서버에 요청하게 되고 캐시에 `/main/mypage/exploit.css`로 캐시됨
+3. 공격자가 `/main/mypage/exploit.css`에 접근 후 피해자의 정보를 탈취
+
+[chatgpt 계정 탈취](https://www.shockwave.cloud/blog/shockwave-works-with-openai-to-fix-critical-chatgpt-vulnerability)
+
+#### SOP
+
+> Same-origin Policy
+
+자바 스크립트로 로드된 다른 출처의 리소스에 접근할 수 없다.  (img,video,script src 제외)
+
+예를 들어 사이트를 만들고 `a.html`파일을 만들었다고 했을 때 `<src img>`테그를 쓸 수 있는데 여기서 다른 페이지의 이미지를 가져오는 것은 가능하지만 자바스크립트로 로드된 페이지에 자바 스크립트로 접근할 수 없다는 의미이다
+
+만약에 해커가 `hack.com`이라는 서버를 만들어서 `hack.com/phishing.php`라는 페이지를 만들고 그 안에 `<script>`테그가 들어있다고 했을 때 이 `<script>`테그에는 예를 들어 `naver.com` 페이지에 있는 민감한 정보를 가지고 와서 공격자 사이트로 데이터를 보내는 악성 스크립트를 만들고 피해자한테 이 페이지를 보내면 피해자의 컴퓨터에서 `naver.com`에 있는 민감한 정보들이 공격자의 서버로 전송된다
+
+이제 이 문제를 브라우저에서 막기로 했다
+
+다른 출처에서 온 데이터를 불러오게 되면 (예시에서는 naver.com) 공격자 페이지의
+
+```js
+function reqListener(){
+  location='https://naver.com/log?key='+this.responseText;
+};
+```
+위 코드에서 `this.responseText;`부분을 실행할 때 오류가 발생한다
+
+> SOP의 기준? 같은 출처의 기준?
+
+1. domain
+2. scheme - 프로토콜 (http, https)
+3. port
+
+위 3가지가 같으면 같은 출처
+
+> 예시
+
+`http://test.com:80/main/test.html`
+
+위 페이지에서 로드된 리소스에 접근할 수 있는 페이지는?
+
+1. `http://tesT.com:80/main/admin.html`
+2. `http://test.com:8080/main/super.html`
+3. `https://test.com:80/main/sectret.html`
+4. `http://naver.com/main/mypage.html`
+
+정답은 `4`이다
+
+하지만 브라우저 개발자들이 `SOP`를 만들고 나서 개발자들이 다른 출처에 있는 스크립트를 가져다 쓰지 못하게 되자 `CORS`라는 규칙을 만들게 된다
+
+#### CORS
+
+> Cross-Origin Resource Sharing
+
+서로 다른 도메인에서의 리소스 허가
+
+`ACAO 헤더`를 추가하기로 했다
+
+> this.response 할 때
+
+지금 응답하는 이 정보들을 접근해서 사용해도 되는 도메인들을 `Acess-Control-Allow-Origin` 헤더에 넣어서 응답한다
+
+> 웹 브라우저
+
+웹 브라우저에서는 `ACAO` 헤더를 참고해서 지금 페이지의 도메인이 이 리소스에 접근해도 되는지 판단하고 컨트롤한다
+
+#### 취약점 발생 1
+
+`ACAO` 헤더를 쓸 때 참조하는 사이트가 늘어날 수록 계속 추가해줘야해서 귀찮아서 `ACAO` 헤더에 `와일드카드`를 넣어버리게 된다
+
+```
+Access-Control-Allow-Origin:*
+```
+
+`SOP`가 없을 때와 같은 상황이 되었다
+
+하지만 이렇게 하면 `쿠키`를 제외한 모든 것을 보내주게 되는데 `쿠키`가 없다면 타 도메인의 마이페이지에서 중요 정보를 가져오지 못하는 문제가 생긴다
+
+그래서 이번에는 `ACAC (Access-Control-Credentials)` 헤더의 값을 `true`로 응답해서 쿠키값을 가지고 올 수 있게 되었다
+
+```
+Access-Control-Allow-Origin: [Origin Header Vlue]
+Access-Control-Credentials: true
+```
+
+만 대신에 이렇게 하면 다시 `와일드카드`는 쓸 수 없게 된다
+
+결국 다시 하나씩 등록해야하는것
+
+이것을 또 우회하기 위해 요청 헤더의 `Origin`값을 자동으로 `ACAO` 헤더값에 넣도록 만들어버렸다. 사실상 `*`와 같은 것
+
+결국 또 이렇게 되면 `SOP`가 없을 때와 같은 상황이...
+
+그리고 다시 한번 처음에 문제가 되었던 취약점이 되살아났기에 `ACAO` 헤더에서 동적으로 `Origin`을 가져다쓰지 않게 되었다고...
+
+#### 취약점 발생 2
+
+개발하는 입장에서는 아직 도메인이 없을 때 만약에 `Origin 헤더`가 `null`이면 그냥 허용해 줄 수 있도록 브라우저에서 설정되어있는데 여기서 또 문제가 발생했다
+
+원래는 `burpsuite`로 직접 찍어보지 않는 한 `Origin` 헤더를 변경할 수 없지만 `iframe`
+에서의 요청은 피해자 컴퓨터에서 `Origin` 헤더를 `null`로 세팅할 수 있었다 
+
+`iframe`을 이용하면 또 우회가 되었던것..
+
+#### 취약점 발생 3
+
+이제는 화이트리스트 기반의 필터링을 하기로 했다
+
+`test.com` 도메인의 하위에 있는건 전부 `CORS 정책`을 허용하도록 설정했지만 또 문제가 생겼다
+
+공격자가 `badtest.com`을 등록하고 공격하게 되면 뒤에 부분이 `test.com`으로 같기에 공격에 성공하기도 하였다
+
+[CORS 잘못된 설정으로 민감 정보 유출 가능성](https://hackerone.com/reports/426165)
+
+#### CORS 취약점이 없다면?
+
+같은 도메인, 허용하는 도메인에서 XSS 취약점을 찾으면 된다
+
+#### 강의 이후
+
+이후에는 계속해서 타겟(Zuicy)에서의 취약점을 찾고 발표하는 시간을 가졌다
+
+우리팀은 아직 하나도 찾지 못했다!
+
+그런데 정말 신기한게 `XSS`나 `CORS`와 같은 특별한 기술과 관련된 취약점 보다는 `파라미터 변조`와 같은 되게 쉽게 도전할 수 있는, 처음 내가 볼 때는 모르겠지만 남이 한번 딱 시범을 보여주면 "아니 나도 저기 보고있었는데?" 싶은 그런 간단한 부분에서 큰 취약점들이 나왔다
+
+와 어케찾았담
+
+3일차 끝!
 
 ### 4일차 2024-10-10
+
+IMG_7740 부터 시작
 
 ## 추후 일정
 
 ![일정](https://github.com/user-attachments/assets/29d01686-0a82-484f-90a5-70dc9d8f8022)
 
-어우 최근에 갑자기 삘받아서 `KISA Academy`에 있는 과정 중에 흥미로워 보이는 것들을 전부 신청했더니 시간표가 뭔가 많아졌다
+어우 최근에 갑자기 삘받아서 `KISA Academy`에 있는 과정 중에 흥미로워 보이는 것들을 전부 신청했더니 시간표가 뭔가 많아졌다. 공부할 것이 이제 5개다
 
 뭔가 서순이 잘못된 것 같지만 이것을 기록하는 오늘부터 `버그헌팅 실습훈련 초급과정`이 시작된다
 
 이론을 배우고 실습을 했어야했는데! 살짝 아쉽달까?
 
 그래도 다음번(아마도 공익근무중일 때이겠지만)에 또 기회가 된다면 이번에는 조금 더 잘 할 수 있을 것같다
+
+---
+잘못된 정보가 있다면 언제든 알려주세요~
 
 ᓚᘏᗢ
