곧 끝 그 전에 점심 먹고

--- a/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
+++ b/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
@@ -886,7 +886,137 @@ Access-Control-Credentials: true
 
 ### 4일차 2024-10-10
 
-IMG_7740 부터 시작
+마지막 날이자 팀명이 제 값을 한 날
+
+취약점을 보고할 때에는 취약점을 찾게 된 경로를 상세하게 적어서 제출하는게 좋다
+
+아무리 읽는 사람이 개발자라고 해도 설명은 필요하니까
+
+그리고 또 너무 자세하게 (진짜 무슨 웹사이트를 킨다, 로그인 버튼을 누른다 정도의 자세함)는 쓸 필요 없음
+
+물론 취약점과 관련된 거라면 필요하지만
+
+취약점 인지 아닌지 판별하는 것은 간단하다, 본인이 생각했을 때 공격자(해커)가 악용할 수 있을 것 같다! 하면 그게 취약점이다
+
+#### IDOR
+
+> Insecure Direct Object Reference
+
+즉 부적절한 인가 취약점 혹은 비인가 취약점
+
+우리가 못하는 것을 할 수 있다면 `IDOR`이다
+
+예를 들어 우리가 다른 사람 개인정보를 볼 수 있다던가 다른 사람의 게시물을 삭제 및 수정이 가능한다면 그것이 바로 `IDOR`이다
+
+이것을 찾기 위해서는 가장 처음 우리가 서비스에서 무엇을 할 수 있는지 무엇을 할 수 없는지 서비스 로직을 파악해 놓는 것이 필요하다
+
+인가 취약점을 찾을 때는 서버측에서 데이터가 영향이 가는지 클라이언트쪽에서의 응답값 변조로 인해 생긴 취약점인지를 잘 파악해서 보고서를 작성해야 한다
+
+인가 취약점은 주로 `파라미터 변조` 또는 `URL 직접 접근`을 통해 일어난다
+
+> URL직접 접근 사례
+
+로그인을 누르면 OTP번호를 입력하는 페이지가 있는데 서버에서는 일단 로그인과 비밀번호를 받으면 세션을 만들어놓게 되는 상황이 있었다
+
+이 상황에서 URL을 변조하여 dashboard로 이동했더니 OTP 우회에 성공하게 되었던 사례를 설명해 주셨다
+
+> Hackerone 사례
+
+[Attachment disclosure via summary report](https://hackerone.com/reports/2442008)
+
+summary 레포트를 통해 다른 사람의 첨부 파일을 볼 수 있다
+
+파라미터를 변조해서 다른 사람의 첨부파일을 볼 수 있었고 바운티가 15000달러였다
+
+세상에 20555550원이라니
+
+이유라고 한다면 누구나 쉽게 변조하여 취약점을 이용할 수 있기에 바운티가 높았다고 한다
+
+[Delete anyone's content spotlight remotely.](https://hackerone.com/reports/1819832)
+
+다른 사람의 글을 삭제하는 취약점
+
+본인 포스트에서 삭제 버튼을 누르고 다른 사람의 포스트 ID로 바꾸면 다른 사람의 포스트가 삭제되는 취약점
+
+이것도 15000$
+
+참고로 한국보다는 외국이 버그바운티는 훨씬 크다
+
+#### Subdomain Taker
+
+subdomain : 하위 도메인
+
+예를 들어 `naver.com`이 있을 때 `mail.naver.com`이 바로 subdomain이다
+
+> 유형 1 (연결된 링크에 도메인 없음)
+
+우리가 웹 페이지를 하나 만들었다고 해보자
+
+그 웹 페이지에는 다음과 같은 자바스크립트 하나를 로드하는 코드가 있다
+
+```js
+<script src="https://aaa.com/test.js"></script>
+```
+
+그런데  나중에 `aaa.com` 도메인을 삭제했지만 웹 페이지에 있는 위 코드 지우는 것을 까먹었다면?
+
+해커가 `aaa.com`이라는 도메인을 구매해서 `test.js`라는 이름의 악성 코드를 올릴 수도 있다
+
+이런 일은 보통 회사에서는 팀 단위로 작업을 하기 때문에 내가 작성한 코드가 아니면 혹은 다른 사람한테서 인수인계 받은 코드라면 모르고 있을 확률이 높기 때문에 생기는 취약점이라고 한다
+
+> Hackerone 사례
+
+[Broken Link Takeover from kubernetes.io docs](https://hackerone.com/reports/1398572)
+
+kubernetes라는 사이트에서 링크를 클릭했을 때 없는 도메인이 발견되어 바로 공격에 사용이 가능했던 취약점
+
+> 유형 2 (CNAME)
+
+CNAME : 일종의 별칭
+
+예를 들어 강사님의 웹사이트인 `academy.segfaulthub.com`이라는 도메인으로 들어가게 되면 `segfaultacademy.teachable.com`으로 이동된다
+
+보통은 이런건 직접 연결하는 것이 아니라 플랫폼에서 팔고 있다 한다
+
+쉽게 말해 우리가 네이버에 계정을 만들면 카페를 만들 수가 있는데 이런 식으로 플랫폼(naver)에서 만들수 있다
+
+강사님은 `teachable`이라는 사이트에서 도메인을 받아왔고 원래 링크는 `segfaultacademy.teachable.com`이지만 이름을 바꾸고 싶어서 `CNAME`을 걸어서 `academy.segfaulthub.com`으로 연결되게 해놓으셨다
+
+`tistory`에도 같은 기능이 있어 만약에 이름을 바꾸고 싶다면 도메인을 사서 `CNAME`을 정해줄 수 있다
+
+하지만 이제 `segfaultacademy.teachable.com`을 그만 운영하려고 `teachable`에서 탈퇴했는데 `CNAME`이 등록된 것을 까먹고 그냥 방치하게 되면?
+
+공격자가 `teachable`에 가입해서 `segfaultacademy.teachable.com`으로 도메인을 등록하게 되면 사용자들이 `academy.segfaulthub.com`으로 들어오면 공격자의 사이트로 이동하게 된다
+
+[security-flashcards](https://security-flashcards.com/)에서 되게 귀엽게 그림으로 과정을 표현해 놓았다, 하지만 유료라는 사실
+
+> Hackerone 사례
+
+[Subdomain Takeover of brand.zen.ly](https://hackerone.com/reports/1474784)
+
+도메인 탈취
+
+> 자동화 툴
+
+그냥 사이트의 모든 링크를 클릭해 보고 `unreachable`이 뜬다면 도메인을 사서 바로 취약점을 제보할 수도 있다
+
+그를 위한 툴이 바로 [subjack](https://github.com/haccer/subjack)이다
+
+`This repository has been archived by the owner on Jan 7, 2024. It is now read-only.`
+
+더 이상 관리를 안하기는 한다, 애초에 관리할 이유도 없긴 하지?
+
+IMG_7744 부터
+
+#### 팀에서 찾은 것 (OnlyOne)
+
+`IDOR` 즉 비인가 취약점을 발견했다
+
+사실 내가 팀장이라고는 하나 버그바운티 (웹, 앱 해킹)은 배워본 적이 전무했던지라 4일차까지 와서야 그동안 6시간 왕복하면서 찾아본 정보들로 간신히 따라갈 수 있었기에 이 취약점을 찾는데에는 거의 도움이 되지 못했다
+
+다음번에 또 기회가 되서 실습훈련을 하게 된다면 그 때에는 조금 더 잘 할 수 있을지도?
+
+팀원분들 감사합니다! 즐거운 4일이였다지요
 
 ## 추후 일정
 
