스타트업 연계 과정 끝

--- a/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
+++ b/_posts/2024-10-09-kisa-2024년-버그헌팅-실습훈련-스타트업-연계과정-7차.md
@@ -1018,6 +1018,28 @@ IMG_7744 부터
 
 팀원분들 감사합니다! 즐거운 4일이였다지요
 
+#### 보고서 관련 이야기
+
+취약점의 위치 : 어디를 고처야 하는지
+
+공격을 재현하여 보고서 제출
+
+또한 해커가 할 수 있는 공격 시나리오를 보여주면 좋다
+
+캡쳐를 뜰 때에는 폰트 크게
+
+## 마무리
+
+이렇게 총 5일(수요일은 휴일) 동안의 실습 훈련이 끝났다
+
+솔직히 왕복 6시간 때문에 아침 5시에 일어나서 준비하고 집에 오면 10시여서 꽤나 힘들기는 했지만 배우는 내용들이 너무 재밌어서 다음에 또 할 수 있겠냐고 한다면 무조건 한다
+
+버그바운티라고 그냥 이름만 들어봤었는데 이번 기회에 제대로 배워보니 너무 즐거웠다
+
+팀원의 조장이 되어서 아예 아는 내용이 없었음에도 발표도 해보고 직접 취약점도 보고서로 제출해보고 솔직히 이정도로 많이 배운적이 있나 싶다
+
+끝!
+
 ## 추후 일정
 
 ![일정](https://github.com/user-attachments/assets/29d01686-0a82-484f-90a5-70dc9d8f8022)
