--- a/_posts/2024-10-16-kisa-중급-침해사고-대응훈련-악성문서파일-분석-HWP-5차수.md
+++ b/_posts/2024-10-16-kisa-중급-침해사고-대응훈련-악성문서파일-분석-HWP-5차수.md
@@ -5,3 +5,21 @@ categories: [KISA, 보안]
 tags: [침해사고 대응훈련, HWP, 악성문서파일]
 pin: true
 ---
+
+# 시작
+
+처음에 들었던 `MITRE ATT&CK` 수업과 비슷한 느낌의 수업이지 않을까 했는데 강의 내용이 뭔가 훨씬 더 재밌어졌다
+
+대학교 수업으로 표현하자면 `MITRE ATT&CK`수업은 1학년 때 배우는 기초 수업, `악성문서파일 분석(HWP)`수업은 이제 막 2학년에 들어와서 처음 배우는 전공 수업과 같은 느낌의 수업이다
+
+그리고 정말 강의가 거의 무슨 유튜브 영상같이 잘 만들어져있다 
+
+![image](https://github.com/user-attachments/assets/cf1df026-489b-4368-b5cb-134f1b7743b9)
+
+나중에 문제가 된다면 사진은 삭제하겠다
+
+위와같은 형식으로 강의에서 내가 딱 궁금했던 내용들이 나와서 설명을 해주는데 강사님은 하던대로 강의를 진행하시고 영상에만 딱 이렇게 나오니까 너무 좋았다
+
+`HWP`는 그냥 한컴이잖아 생각하고 넘어가지 말고 한번 꼭 들어봐라 이 강의는 진짜 별이 5/5다
+
+## 목차
