--- a/_posts/2024-10-16-kisa-2024년-정보보호제품군-실습훈련-기초1-1차.md
+++ b/_posts/2024-10-16-kisa-2024년-정보보호제품군-실습훈련-기초1-1차.md
@@ -5,3 +5,37 @@ categories: [KISA, 보안]
 tags: [정보보호제품군]
 pin: true
 ---
+# 시작
+
+강의를 듣기 전에는 기초에 관한 내용이라고 쓰여있어 공부할 만한 것이 있을까 하는 생각을 했었다
+
+하지만 막상 들어보니 나는 혼자서 공부를 시작했기에 공부의 순서를 잘 알지 못해서 중구난방으로 공부하였는데 이번 기회에 순서에 맞게 기초를 확실하게 다질 수 있었다
+
+## 살짝 문제?
+
+강의 내용은 매우 좋은데 강의 목소리가 AI이고 좀... 뭐랄까 목소리가 째지는 듯한 느낌이 든다
+
+그것만 뺴면 정말 마음에 든다
+
+## 목차
+
+- Windows 운영체제
+- Linux 운영체제
+- 운영체제 기초
+- 네트워크 기초
+
+일단 이렇게 되기는 하는데 내 개인적인 생각으로는
+
+`운영체제 기초` - `Windows 운영체제` - `Linux 기초` - `네트워크 기초` 순으로 공부하는 것이 맞는 순서라고 생각하여 그 순으로 기록한다
+
+만약 처음으로 컴퓨터를 공부하고자 한다면 조금 어려울 수는 있으나 검색을 하면서라도 공부할 마음이 있다면 **꼭 들어보길 추천**한다
+
+이론 뿐 아니라 시뮬레이션도 돌릴 수 있도록 강의가 구성되어있으니 공부할 때 매우 유용할 것이다
+
+## 운영체제 기초
+
+## Windows 운영체제
+
+## Linux 운영체제
+
+## 네트워크 기초
