--- a/_posts/2024-10-16-kisa-2024년-정보보호제품군-실습훈련-기초2-1차.md
+++ b/_posts/2024-10-16-kisa-2024년-정보보호제품군-실습훈련-기초2-1차.md
@@ -5,3 +5,29 @@ categories: [KISA, 보안]
 tags: [정보보호제품군]
 pin: true
 ---
+
+# 시작
+
+`기초1`에 이어 `기초2`에서는 `해킹 기법과 과정`에 관해 배웠다
+
+## 목차
+
+- 시스템 해킹
+- 네트워크 해킹
+- 웹 해킹
+
+해킹을 하는데 필요한 기본 지식들과 그에 따른 실습까지 마련되어있다
+
+보통 실습을 할 때에는 내 컴퓨터의 VM에 설치를 하여 진행하곤 했는데 여기서는 `VMRC(Virtual Machine Remote Control)`을 이용하여 되게 간단하게 접속하여 실습을 할 수 있어 좋았다
+
+특히 강의마다 설정되어있는 `VMMAP`를 보고 어떤식으로 장비들이 이어져있는지 한 눈에 보고 접속하여 하나하나 다 다룰 수 있는 것이 이 강의를 들을 때의 최고 장점이라고 생각한다
+
+> 네트워크 해킹의 VMMAP
+
+![image](https://github.com/user-attachments/assets/c61c6614-39aa-46a0-9086-3301d44c58d8)
+
+## 시스템 해킹
+
+## 네트워크 해킹
+
+## 웹 해킹
